# AI_AUTOMATION

./: CLAUDE.md
chicx-bot/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  nginx.conf  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
chicx-bot/.claude/agents/: eng-verification-auditor.md
chicx-bot/alembic/: env.py
chicx-bot/alembic/versions/: a1b2c3d4e5f6_remove_dead_code.py  c4f8f2e06cf5_initial_schema.py  d5e6f7g8h9i0_update_embedding_dimension_2048.py  e7f8g9h0i1j2_add_unique_constraint_bolna_call_id.py
chicx-bot/app/: __init__.py  config.py  main.py
chicx-bot/app/api/: deps.py
chicx-bot/app/core/: __init__.py  llm.py  prompts.py  tools.py
chicx-bot/app/db/: __init__.py  session.py
chicx-bot/app/models/: __init__.py  conversation.py  knowledge.py  order.py  system.py  user.py  voice.py
chicx-bot/app/schemas/: voice.py  whatsapp.py
chicx-bot/app/services/: analytics.py  bolna.py  chicx_api.py  chicx_sync.py  embedding.py  retention.py  shiprocket.py  voice_orchestrator.py  whatsapp.py
chicx-bot/app/utils/: phone.py
chicx-bot/archive/self_hosted_bolna_2025_12_15/: README.md
chicx-bot/bolna/: agent_config.yaml
chicx-bot/dashboard/: package-lock.json  package.json
chicx-bot/scripts/: configure_bolna_agent.py  deploy.sh  generate_embeddings.py  import_faqs.py  init.sh  run_tests.sh  setup-monitoring.sh  subscribe_webhook.sh  test_db_connection.py
chicx-bot/tests/: __init__.py  conftest.py
(+69 files in other folders)
